# web

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  web.conf
api_for_poll_service/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
api_set/: json.json  Описание-API.xlsx
apps/: urls.py
apps/api/: apps.py  serializer.py  urls.py  views.py
apps/dogovora/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/dogovora/migrations/: 0001_initial.py  0002_alter_dogovorindi_tip_dogovora_dogovorentry.py  0003_remove_dogovorentry_author.py  0004_remove_dogovorentry_passport_birthday_date_and_more.py
apps/dogovora/type_of_contracts/: __init__.py  tables.py  types_entry.py  types_indi.py  types_of_contracts_for_print.py
apps/dogovora/views/: create_dogovor.py  utils.py  (+4 more)
apps/froze/: admin.py  apps.py  urls.py  views.py
apps/oauth2mailru/: apps.py  backends.py  urls.py  utils.py  views.py
apps/search/: apps.py  urls.py  views.py
pollapp/: models.py  serializers.py  urls.py  views.py
pollapp/migrations/: 0001_initial.py
portal/: middleware.py  settings.py  settings_db.py  urls.py
portal/pymymailru/: __init__.py  pymymailru.py
static/css/: styles.css  stylesmain.css
static/custom/: base.js  javascripts.js  styles.css
static/datetimepicker/: jquery.datetimepicker.js  suggestions.min.css  suggestions_settings.js
static/dogovora/: dogovora_original_docx_view.css  jquery.inputmask.bundle.js  suggestions_dogovora.js
static/froze/: datetimepicker_settings.js  inputmask_settings.js
static/js/: base.js  scripts.js
(+134 files in other folders)
