[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Ruslan Sayfullin <ruslansaifullin91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.0.0"
pillow = "^9.5.0"
pytest = "^7.3.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
